--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Ashraf Splittgerber (<a href="https://github.com/ashrafsp" class="user-mention">
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">SuperDinoBros.  maintained by <a href="https://github.com/BPenzar">BPenzar</a></p>
+        <p class="copyright">SuperDinoBros. gsg  maintained by <a href="https://github.com/BPenzar">BPenzar</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
