--- a/index.html
+++ b/index.html
@@ -33,14 +33,8 @@
       <section id="main_content" class="inner">
         <h2>
 <a id="superDinoBros" class="anchor" href="#superDinoBros" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SuperDinoBros.</h2>
-<p> Dino Sidescroller JumpNRun Adventure Game<br>
-...</p>
-
+<p> Dino Sidescroller JumpNRun Adventure Game</p>
 <p>Inhalte aus der Präsentation <a href="">Link ins nichts</a> </p>
-
-<h5>
-<a id="ueberschrift1" class="anchor" href="#ueberschrift1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Überschrift</h5>
-<p>Blabla.</p>
 
 <h5>
 <a id="concept" class="anchor" href="#concept" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Concept</h5>
@@ -68,11 +62,10 @@ Präsentation</p>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h2>
 
 <p>
-<b>Programming and Organisation:</b> Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
-Riccardo Fuda (<a href="https://github.com/Birdistheword" class="user-mention">@Birdistheword</a>)<br>
-Sebastian Grüssinger (<a href="https://github.com/Sebastian-Gru" class="user-mention">@Sebastian-Gru</a>)<br>
-Jan Leubner (<a href="https://github.com/Peppi92" class="user-mention">@Peppi92</a>)<br>
-Ashraf Splittgerber (<a href="https://github.com/ashrafsp" class="user-mention">@ashrafsp</a>)</p>
+  <b>Programming and Organisation:</b> Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
+  <b>Programming and Organisation:</b> Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
+  <b>Programming and Organisation:</b> Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
+</p>
       </section>
     </div>
 
