--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@ Präsentation</p>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h2>
 
 <p>
-  <b>Programming and Organisation:</b> Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
-  <b>Programming and Organisation:</b> Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
-  <b>Programming and Organisation:</b> Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
+  Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
+  Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
 </p>
       </section>
     </div>
