--- a/index.html
+++ b/index.html
@@ -63,7 +63,14 @@ Präsentation</p>
 
 <p>
   Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
-  Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
+  Christopher Thiel <br>
+  Gabo Vargas <br>
+  Gabriele Schäfer <br>
+  Marie Blom <br>
+  Martin Lohmer <br>
+  Max Eckmann <br>
+  Max Sprenger <br>
+  Ryan Schou <br>
 </p>
       </section>
     </div>
