--- a/index.html
+++ b/index.html
@@ -45,18 +45,25 @@
 
 <h4><a id="2411---0112" class="anchor" href="#2411---0112" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>26.04.2017 - 03.05.2017</h4>
 
-<p>Grundidee<br>
-Namensgebung<br>
-Organsitaion (GitHub, Trello, Mail, GoogleDrive)<br>
-Arbeitsaufteilung<br>
-Präsentation</p>
+<p>
+  Grundidee<br>
+  Namensgebung<br>
+  Organsitaion (GitHub, Trello, Mail, GoogleDrive)<br>
+  Arbeitsaufteilung<br>
+  Präsentation
+</p>
 
 <h4><a id="0112---0812" class="anchor" href="#0112---0812" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>03.05 - 08.12</h4>
 
-<p>Erste Zeitplan Einschätzung zur Orientierung<br>
-...<br>
-...<br>
-...</p>
+<p>
+  Erste Zeitplan Einschätzung zur Orientierung<br>
+  Sound Grundthema<br>
+  Dino Prototyp<br>
+  Hintergründe Grundlage<br>
+  1. Logo<br>
+  Social Media Präsenz (Instagramm, Facebook, Snapchat)<br>
+  Grundmechanik Unity (Sidescroller Welt, Figurmechanik Versuche)
+</p>
 
 
         
@@ -65,14 +72,14 @@ Präsentation</p>
 
 <p>
   Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
-  Christopher Thiel <br>
-  Gabo Vargas <br>
+  Christopher Thiel (<a href="https://github.com/cthiel2" class="user-mention">@cthiel2</a>)<br>
+  Gabo Vargas (<a href="https://github.com/Gabo0890" class="user-mention">@Gabo0890</a>)<br>
   Gabriele Schäfer <br>
-  Marie Blom <br>
+  Marie Blom (<a href="https://github.com/Marie22pp" class="user-mention">@Marie22pp</a>)<br>
   Martin Lohmer <br>
-  Max Eckmann <br>
-  Max Sprenger <br>
-  Ryan Schou <br>
+  Max Eckmann (<a href="https://github.com/meckmann" class="user-mention">@meckmann</a>)<br>
+  Max Sprenger (<a href="https://github.com/LagonasMax" class="user-mention">@LagonasMax</a>)<br>
+  Ryan Schou (<a href="https://github.com/RyanGodric" class="user-mention">@RyanGodric</a>)<br>
 </p>
       </section>
     </div>
