--- a/index.html
+++ b/index.html
@@ -65,7 +65,90 @@
   Grundmechanik Unity (Sidescroller Welt, Figurmechanik Versuche)
 </p>
 
+        
 
+<h3><a id="zeitplan" class="anchor" href="#zeitplan" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Zeitplan</h3>
+  <h4>
+    <a id="z1" class="anchor" href="#z1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+    Bis 24.05.2017
+  </h4>
+    <h6>Game</h6>
+      <p>InGameAplhaversion<br>
+        Figurmechanik (Springen, Laufen)<br>
+        Sidescroller (sich wiederholende Patterns)<br>
+        Kamerafahrt<br>
+        Eingebunden: Sound, Designs, Dino-Figur
+      </p>
+    <h6>Nutzerstatistik</h6>
+      <p>
+       Umfragebögen (bereit für internes Feedback)
+      </p>
+    <h6>Hintergründe</h6>
+      <p>2 „Maps“<br>
+        Hintergrundgegenstände (Sonne, Palmen,...) 3 Eben
+      </p>
+    <h6>Dino Design</h6>
+      <p>1. Dino Prototyp<br>
+        Dino Animation (Laufen, Springen)
+      </p>
+    <h6>Sound</h6>
+      <p>InGame Theme (Prototyp)<br>
+        Springen Soundeffekte<br>
+        Laufen Soundeffekte
+      </p>
+    <h6>Interface und Menü</h6>
+      <p>
+        Konzeptueller Prototyp (Funktionen und Verknüpfungen, etc.)
+      </p>
+    <h6>Interface und Menü Design</h6>
+      <p>Logo<br>
+        Interface Design<br>
+        Schriftdesign
+      </p>
+    <h6>Social Media</h6>
+      <p>Facebook (200 Follower)<br>
+        Instagram (300 Follower)<br>
+        Aphaversion präsentiert und möglichst weit verbreitet
+      </p>
+  <h4>
+    <a id="z2" class="anchor" href="#z2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+    Bis 07.06.2017
+  </h4>
+    <h6>Game</h6>
+      <p>Interface und InGame verknüpft<br>
+        Ducken<br>
+        Hindernisse und Löcher<br>
+        Spielmechanik anpassen
+      </p>
+    <h6>Nutzerstatistik</h6>
+      <p>1. Umfrage<br>
+        Erste Auswertung und Feedback
+      </p>
+    <h6>Hintergründe</h6>
+      <p>4 Maps
+      </p>
+    <h6>Dino Design</h6>
+      <p>1. Dino Fertig (inkl. Duckenanimation)<br>
+        Animationen Fertig<br>
+        2. Dino Prototyp
+      </p>
+    <h6>Sound</h6>
+      <p>Menü Theme Prototyp<br>
+        InGame Theme Schleife mit Variationen<br>
+        InGame Effektsounds Fertig
+      </p>
+    <h6>Interface und Menü</h6>
+      <p>Eingebunden in Spiel<br>
+        Konzeptbugs bearbeitet
+      </p>
+    <h6>Interface und Menü Design</h6>
+      <p>Interfacedesign fertig<br>
+        Ladebildschirm und Animation Prototyp
+      </p>
+    <h6>Social Media</h6>
+      <p>500 Facebook<br>
+        500 Instagram
+      </p>
         
 <h2>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h2>
