--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
 
 <h4><a id="2411---0112" class="anchor" href="#2411---0112" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>26.04.2017 - 03.05.2017</h4>
-
 <p>
   Grundidee<br>
   Namensgebung<br>
@@ -54,7 +53,6 @@
 </p>
 
 <h4><a id="0112---0812" class="anchor" href="#0112---0812" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>03.05 - 08.05.2017</h4>
-
 <p>
   Erste Zeitplan Einschätzung zur Orientierung<br>
   Sound Grundthema<br>
@@ -63,6 +61,12 @@
   1. Logo<br>
   Social Media Präsenz (Instagramm, Facebook, Snapchat)<br>
   Grundmechanik Unity (Sidescroller Welt, Figurmechanik Versuche)
+</p>
+        
+<h4><a id="0112---0812" class="anchor" href="#0112---0812" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>03.05 - 08.05.2017</h4>
+<p>
+ ...<br>
+ ...
 </p>
 
         
