--- a/index.html
+++ b/index.html
@@ -63,10 +63,18 @@
   Grundmechanik Unity (Sidescroller Welt, Figurmechanik Versuche)
 </p>
         
-<h4><a id="0112---0812" class="anchor" href="#0112---0812" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>03.05 - 08.05.2017</h4>
+<h4><a id="0112---0812" class="anchor" href="#0112---0812" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>09.05 - 24.05.2017</h4>
 <p>
- ...<br>
- ...
+  In-Game Aplhaversion (Laufen + Springen) <br>
+  Erster Umfragebogen<br>
+  1. Hintergrundwelt und Gegenstände<br>
+  1. Dino (+Animationsprototyp)<br>
+  Sound In-Game Theme<br>
+  Konzept für Interface und Menü<br>
+  Prototyp Interface und Menü Design<br>
+  Logo<br>
+  Facebook (50F)<br>
+  Instagram (50F)
 </p>
 
         
