--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/BPenzar/SuperDinoBros.">View on GitHub</a>
 
           <h1 id="project_title">SuperDinoBros.</h1>
-          <h2 id="project_tagline">...</h2>
+          <h2 id="project_tagline"></h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/BPenzar/SuperDinoBros./zipball/master">Download this project as a .zip file</a>
@@ -33,12 +33,8 @@
       <section id="main_content" class="inner">
         <h2>
 <a id="superDinoBros" class="anchor" href="#superDinoBros" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SuperDinoBros.</h2>
-<p> Dino Sidescroller JumpNRun Adventure Game</p>
-<p>Inhalte aus der Präsentation <a href="">Link ins nichts</a> </p>
+<p> Dino Sidescroller JumpNRun Multiplayer Adventure Game</p>
 
-<h5>
-<a id="concept" class="anchor" href="#concept" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Concept</h5>
-<p>...</p>
 
 <h2><a id="weekly-progress" class="anchor" href="#weekly-progress" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Weekly Progress</h2>
 
