--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/BPenzar/SuperDinoBros.">View on GitHub</a>
 
           <h1 id="project_title">SuperDinoBros.</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline"> Dino Sidescroller JumpNRun Multiplayer Adventure Game</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/BPenzar/SuperDinoBros./zipball/master">Download this project as a .zip file</a>
@@ -31,13 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h2>
-<a id="superDinoBros" class="anchor" href="#superDinoBros" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SuperDinoBros.</h2>
-<p> Dino Sidescroller JumpNRun Multiplayer Adventure Game</p>
 
 
 <h2><a id="weekly-progress" class="anchor" href="#weekly-progress" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Weekly Progress</h2>
-
 
 <h4><a id="2411---0112" class="anchor" href="#2411---0112" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>26.04.2017 - 03.05.2017</h4>
 <p>
