--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
   Bruno Penzar (<a href="https://github.com/BPenzar" class="user-mention">@BPenzar</a>)<br>
   Christopher Thiel (<a href="https://github.com/cthiel2" class="user-mention">@cthiel2</a>)<br>
   Gabo Vargas (<a href="https://github.com/Gabo0890" class="user-mention">@Gabo0890</a>)<br>
-  Gabriele Schäfer <br>
+  Gabriele Schäfer (<a href="https://github.com/Schfr" class="user-mention">@Schfr</a>)<br>
   Marie Blom (<a href="https://github.com/Marie22pp" class="user-mention">@Marie22pp</a>)<br>
-  Martin Lohmer <br>
+  Martin Lohmer (<a href="https://github.com/MartenJerry" class="user-mention">@MartinLohmer</a>)<br>
   Max Eckmann (<a href="https://github.com/meckmann" class="user-mention">@meckmann</a>)<br>
   Max Sprenger (<a href="https://github.com/LagonasMax" class="user-mention">@LagonasMax</a>)<br>
   Ryan Schou (<a href="https://github.com/RyanGodric" class="user-mention">@RyanGodric</a>)<br>
